--- a/praktikum 9/1-Coba inputteks.html
+++ b/praktikum 9/1-Coba inputteks.html
@@ -3,10 +3,10 @@
   <body>
     <form>
       Nama Depan:
-      <input type="text" name="Afiva" />
+      <input type="text" name="Bima" />
       <br />
       Nama Keluarga:
-      <input type="text" name="Nurkamila" />
+      <input type="text" name="Saputra" />
     </form>
   </body>
 </html>
